# LK_Hospital_Management

./: db.sqlite3  pyproject.toml  requirements.txt
hospital_app/: admin.py  forms.py  lk_hospital_management.sql  models.py  urls.py  views.py
hospital_app/migrations/: 0001_initial.py  0002_department_alter_appointment_options_and_more.py  0003_alter_appointment_appointment_date.py
hospital_app/templates/: about.html  add_app.html  add_appointment.html  add_bill.html  add_doctor.html  add_patient.html  appointments.html  billing.html  contact.html  doctors.html  home.html  login.html  patients.html  registration.html  settings.html  update_appointment.html  update_bill.html  update_doctor.html  update_patient.html  view_appointments.html
hospital_management/: settings.py  urls.py
